fix: Less contrast input

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,7 +29,7 @@
     }
 
     input.text-gray-700, textarea.text-gray-700 {
-        color: #e2e8f0;
+        // color: #e2e8f0;
     }
 
     .dark\:text-black{color: #000000;}
